Rama con estilos

--- a/source.html
+++ b/source.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mejores Jugadores de Fútbol del Mundo</title>
-<style type="text/css">
-.grande { font-size: 60px; }
-</style>
-<script>
-// Escribir aqui el código Javascript
-</script>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
